# vaultdex

./: .gitignore  AGENTS.md  Cargo.toml  deny.toml  taplo.toml
.github/workflows/: ci.yml
src/: indexer.rs  lib.rs  storage.rs
src/parser/: frontmatter.rs  headings.rs  links.rs  markdown.rs  mod.rs  tags.rs  types.rs  util.rs
src/storage/: schema.sql
