[package]
edition = "2024"
license = "Apache-2.0"
name = "vaultdex"
rust-version = "1.94"
version = "0.1.0"

[dependencies]
blake3 = "1.8.2"
pulldown-cmark = "0.13.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"

[dev-dependencies]
insta = { version = "1.46.3", features = ["json"] }
tempfile = "3.23.0"
